fixed spacing and footer issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@ body{
   font-family: 'Lato', sans-serif;
   font-style:normal;
   font-weight:400;
-  line-height: 2rem;
+  line-height: 1.8rem;
   color: #332609;
   overflow-y: auto;
 }
@@ -72,7 +72,8 @@ max-width: 700px;
   line-height: normal;
   font-size: 14px;
   /* color: #332609 */
-  color: #bf8d1a;
+  /* color: #bf8d1a; */
+  color: #654700;
   text-transform:uppercase;
   letter-spacing: 2px;
 }
@@ -885,7 +886,7 @@ text-indent: -1rem;
 /* HOMEPAGE HOMEPAGE HOMEPAGE HOMEPAGE HOMEPAGE HOMEPAGE HOMEPAGE HOMEPAGE HOMEPAGE HOMEPAGE  */
 
 header img {
-  max-width:50px;
+  max-width:60px;
 }
 
 header {
@@ -920,6 +921,7 @@ nav > a {
 }
 .homepage-intro > h3{
     max-width:700px;
+    /* padding-top: 20px; */
 }
 .homepage-intro > h4{
   padding-bottom:0vw;
@@ -1054,6 +1056,10 @@ nav > a {
 /* BREAKPOINT FOR VENN DIAGRAM */
 @media screen and (max-width: 700px){
 
+  header img {
+    max-width:50px;
+  }
+
   .venn-wrapper {
     max-width: 80%;
       display: grid;
@@ -1161,6 +1167,11 @@ nav > a {
   h4{
     line-height: 1.8;
   }
+
+  .homepage-intro > h3{
+      max-width:700px;
+      padding-top: 10px;
+  }
   .lborder{
     float:left;
     border-top: 2px solid black;
@@ -1250,12 +1261,11 @@ nav > a {
   }
   .footer-icon{
     display: grid;
-    grid-template-columns: 40px 40px 40px;
+    grid-template-columns: 36px 36px 36px;
     justify-content: center;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-column-gap: 40px;
-
   }
   .height-two-hundred{
     min-height:75px;
@@ -1321,6 +1331,15 @@ nav > a {
   margin:auto;
   color:#755330;
   text-indent: -1rem; */
+  }
+
+  .footer-icon{
+    /* display: grid; */
+    grid-template-columns: 30px 30px 30px;
+    /* justify-content: center;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-column-gap: 40px; */
   }
 }
 
